@@ -1,3 +1,9 @@
+2009-07-21  Kevin Ollivier  <kevino@theolliviers.com>
+
+        WebCorePrefix.h build fixes for non-Mac and wx / CURL builds.
+
+        * WebCorePrefix.h:
+
 2009-07-21  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
